src/objects/Projectmember__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projectmembers</relationshipLabel>
        <relationshipName>Projectmembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Member_Name__c</fullName>
        <formula>Contact__r.FirstName + &apos; &apos; +  Contact__r.LastName</formula>
        <label>Project Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <label>Project Role</label>
        <picklist>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projectmanager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubmanager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Projecten__c</referenceTo>
        <relationshipLabel>Projectmembers</relationshipLabel>
        <relationshipName>Projectmembers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>SF_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Projectmember</label>
    <nameField>
        <label>Projectmember Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projectmembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>